[package]
name = "slapi_r_plugin"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "slapi_r_plugin"
crate-type = ["staticlib", "lib"]

[dependencies]
libc = "0.2"
paste = "0.1"
lazy_static = "1.4"
uuid = { version = "0.8", features = [ "v4" ] }
