[package]
name = "entryuuid"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.71"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "entryuuid"
crate-type = ["staticlib", "lib"]

[dependencies]
libc = "0.2"
paste = "0.1"
slapi_r_plugin = { path="../../slapi_r_plugin" }
uuid = { version = "0.8", features = [ "v4" ] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
