[package]
name = "pwdchan"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "pwdchan"
crate-type = ["staticlib", "lib"]

[dependencies]
libc = "0.2"
paste = "0.1"
slapi_r_plugin = { path="../../slapi_r_plugin" }
uuid = { version = "0.8", features = [ "v4" ] }
openssl = { version = "0.10" }
base64 = "0.13"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
