[package]
name = "pwdchan"
version = "0.1.0"
authors = ["William Brown <william@blackhats.net.au>"]
rust-version = "1.70"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "pwdchan"
crate-type = ["staticlib", "lib"]

[dependencies]
libc = "0.2"
paste = "1.0"
slapi_r_plugin = { path="../../slapi_r_plugin" }
uuid = { version = "1.0", features = [ "v4" ] }
openssl = { version = "0.10" }
base64 = "0.22"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
